--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "react-hook-form": "^7.55.0",
         "react-hot-toast": "^2.5.2",
         "react-leaflet": "^5.0.0",
+        "react-router-dom": "^7.5.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
